--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,49 @@
+@use "breakpoints" as br
+@use "abstracts" as abs
 @use "reset"
+@use "components"
 
 html 
     font-family: Arial, Helvetica, sans-serif
 
-h1 
-    color: red
+body
+    margin: 0.5em
+
+ul
+    display: flex
+
+input
+    border-radius: 8px
+    border: 1px solid #ccc
+    padding: 0.25em
+    width: 5em
+
+button
+    border-radius: 8px
+    background: #77a
+    padding: 0.25em 0.5em
+    margin: 0.25em
+
+    &:hover
+        background: #99c
+
+main 
+    display: flex
+    justify-content: space-around
+    align-items: flex-end
+    border-radius: 8px
+    border: 1px solid #0d0d0d
+    padding: 1em 0.5em
+    margin-block: 0.75em
+    height: calc(100vh - 200px)
+
+    & .block
+        height: 100%
+        flex-grow: 1
+        margin: 0 1.5px
+        background: #d00
+        cursor: pointer
+
+        &:hover
+            background: #f33
+            
