--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -25,9 +25,9 @@ main
         flex-grow: 1
         margin: 0 1.5px
         background: abs.$red-900
-        cursor: pointer
-        transition: height 0.5s ease
 
-        &:hover
-            background: abs.$red-700
+        &.active
+            background: abs.$red-500
+
+
             
