--- a/src/sass/components/_Header.sass
+++ b/src/sass/components/_Header.sass
@@ -1,13 +1,21 @@
 @use "../abstracts" as abs
-    
+
+@mixin header-field 
+    margin: 0 0.25em
+    border-radius: 8px
+    border: 1px solid abs.$grey-900
+    padding: 0.25em
+
 .header__list
     display: flex
 
 .header__input
-    border-radius: 8px
-    border: 1px solid abs.$grey-900
-    padding: 0.25em
+    @include header-field
     width: 5em
+
+.header__select
+    @include header-field
+    cursor: pointer
 
 .button--header
     background: abs.$blue-600
