conditional rendering of forms

--- a/src/sass/components/_Header.sass
+++ b/src/sass/components/_Header.sass
@@ -6,6 +6,13 @@
     border: 1px solid abs.$grey-900
     padding: 0.25em
 
+.header__paragraph
+    margin-block: 0.25em
+
+.header__span
+    margin-left: 0.25em
+    font-weight: bold
+
 .header__list
     display: flex
 
@@ -23,5 +30,6 @@
     &:hover
         background: abs.$blue-350
 
-.button--header-confirm
+.button--bold
     font-weight: bold
+
