--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -23,7 +23,7 @@ main
     & .block
         height: 100%
         flex-grow: 1
-        margin: 0 1.5px
+        // margin: 0 1.5px
         background: abs.$red-900
 
         &.active
