sass; center header text content

--- a/src/sass/components/_Header.sass
+++ b/src/sass/components/_Header.sass
@@ -6,6 +6,9 @@
     border: 1px solid abs.$grey-900
     padding: 0.25em
 
+.header 
+    text-align: center
+
 .header__paragraph
     margin-block: 0.25em
 
@@ -14,7 +17,7 @@
     font-weight: bold
 
 .header__list
-    display: flex
+    display: inline-flex
 
 .header__input
     @include header-field
