--- a/src/sass/components/_main.sass
+++ b/src/sass/components/_main.sass
@@ -8,5 +8,7 @@
     border: 1px solid abs.$black-900
     padding: 1em 0.5em 0
     margin-block: 0.75em
-    height: calc(100vh - 200px)
+    height: calc(100vh - 220px)
+    max-height: 1000px
+    max-width: 2500px
 
