--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,7 +6,10 @@ html
     font-family: Arial, Helvetica, sans-serif
 
 body
-    margin: 0.5em
+    margin: 0 auto
+    padding: 0 0.5em
+    max-width: 2000px
+
 
 
 
