sass; change header background

--- a/src/sass/components/_Header.sass
+++ b/src/sass/components/_Header.sass
@@ -8,6 +8,9 @@
 
 .header 
     text-align: center
+    background: abs.$blue-350
+    border-radius: 0.75rem
+    padding-block: 1em
 
 .header__paragraph
     margin-block: 0.25em
