--- a/src/sass/components/_Header.sass
+++ b/src/sass/components/_Header.sass
@@ -10,7 +10,8 @@
     text-align: center
     background: abs.$blue-350
     border-radius: 0.75rem
-    padding-block: 1em
+    padding-block: 0.75em
+    margin-block: 0.5em 0.25em
 
 .header__paragraph
     margin-block: 0.25em
